Add missing property to NorthboundMapping (#1108)
* Add missing property to NorthboundMapping

* Fix test

* Sam's feedback, restore attribute names to in-place string constants