@@ -17,28 +17,26 @@ package com.hivemq.configuration.entity.adapter;
 
 import com.hivemq.adapter.sdk.api.config.MessageHandlingOptions;
 import com.hivemq.adapter.sdk.api.config.MqttUserProperty;
-import com.hivemq.adapter.sdk.api.config.PollingContext;
 import com.hivemq.configuration.entity.EntityValidatable;
 import com.hivemq.mqtt.message.QoS;
 import com.hivemq.persistence.mappings.NorthboundMapping;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
-
 import jakarta.xml.bind.ValidationEvent;
 import jakarta.xml.bind.annotation.XmlElement;
 import jakarta.xml.bind.annotation.XmlElementWrapper;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
+
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class NorthboundMappingEntity implements EntityValidatable {
 
-    @XmlElement(name = "topic", required = true)
-    private final @NotNull String topic;
-
     @XmlElement(name = "tagName", required = true)
     private final @NotNull String tagName;
+
+    @XmlElement(name = "topic", required = true)
+    private final @NotNull String topic;
 
     @XmlElement(name = "maxQos", required = true)
     private final int maxQoS;
@@ -61,12 +59,12 @@ public class NorthboundMappingEntity implements EntityValidatable {
 
     // no-arg constructor for JaxB
     public NorthboundMappingEntity() {
-        topic = "";
         tagName = "";
+        topic = "";
+        maxQoS = QoS.AT_LEAST_ONCE.getQosNumber();
         messageHandlingOptions = MessageHandlingOptions.MQTTMessagePerTag;
         includeTagNames = false;
         includeTimestamp = true;
-        maxQoS = 1;
         userProperties = new ArrayList<>();
         messageExpiryInterval = Long.MAX_VALUE;
     }
@@ -79,7 +77,7 @@ public class NorthboundMappingEntity implements EntityValidatable {
             final boolean includeTagNames,
             final boolean includeTimestamp,
             final @NotNull List<MqttUserPropertyEntity> userProperties,
-            final long messageExpiryInterval) {
+            final @Nullable Long messageExpiryInterval) {
         this.tagName = tagName;
         this.topic = topic;
         this.maxQoS = maxQoS;
@@ -87,66 +85,41 @@ public class NorthboundMappingEntity implements EntityValidatable {
         this.includeTagNames = includeTagNames;
         this.includeTimestamp = includeTimestamp;
         this.userProperties = userProperties;
-        this.messageExpiryInterval = messageExpiryInterval;
+        this.messageExpiryInterval = messageExpiryInterval != null ? messageExpiryInterval : Long.MAX_VALUE;
     }
 
-    public static @NotNull NorthboundMappingEntity fromPersistence(final @NotNull NorthboundMapping northboundMapping) {
-        final List<MqttUserPropertyEntity> mqttUserPropertyEntities = northboundMapping.getUserProperties()
-                .stream()
-                .map(mqttUserProperty -> new MqttUserPropertyEntity(mqttUserProperty.getName(),
-                        mqttUserProperty.getValue()))
-                .collect(Collectors.toList());
-
-        return new NorthboundMappingEntity(northboundMapping.getTagName(),
-                northboundMapping.getMqttTopic(),
-                northboundMapping.getMqttQos(),
-                northboundMapping.getMessageHandlingOptions(),
-                northboundMapping.getIncludeTagNames(),
-                northboundMapping.getIncludeTimestamp(),
-                mqttUserPropertyEntities,
-                northboundMapping.getMessageExpiryInterval());
+    public static @NotNull NorthboundMappingEntity fromPersistence(final @NotNull NorthboundMapping mapping) {
+        return new NorthboundMappingEntity(mapping.getTagName(),
+                mapping.getMqttTopic(),
+                mapping.getMqttQos(),
+                mapping.getMessageHandlingOptions(),
+                mapping.getIncludeTagNames(),
+                mapping.getIncludeTimestamp(),
+                mapping.getUserProperties().stream().map(NorthboundMappingEntity::userProp).toList(),
+                mapping.getMessageExpiryInterval());
     }
 
-    public static @NotNull NorthboundMappingEntity fromApi(final @NotNull com.hivemq.edge.api.model.NorthboundMapping northboundMapping) {
-        final List<MqttUserPropertyEntity> mqttUserPropertyEntities = northboundMapping.getUserProperties()
-                .stream()
-                .map(mqttUserProperty -> new MqttUserPropertyEntity(mqttUserProperty.getName(),
-                        mqttUserProperty.getValue()))
-                .collect(Collectors.toList());
+    private static @NotNull MqttUserPropertyEntity userProp(final @NotNull MqttUserProperty p) {
+        return new MqttUserPropertyEntity(p.getName(), p.getValue());
+    }
 
-        final var qos = switch (northboundMapping.getMaxQoS()) {
-            case AT_MOST_ONCE -> 0;
-            case AT_LEAST_ONCE -> 1;
-            case EXACTLY_ONCE -> 2;
-        };
+    private static @NotNull MqttUserPropertyEntity userProp(final @NotNull com.hivemq.edge.api.model.MqttUserProperty p) {
+        return new MqttUserPropertyEntity(p.getName(), p.getValue());
+    }
 
-        return new NorthboundMappingEntity(northboundMapping.getTagName(),
-                northboundMapping.getTopic(),
-                qos,
+    public static @NotNull NorthboundMappingEntity fromApi(final @NotNull com.hivemq.edge.api.model.NorthboundMapping mapping) {
+        return new NorthboundMappingEntity(mapping.getTagName(),
+                mapping.getTopic(),
+                switch (mapping.getMaxQoS()) {
+                    case AT_MOST_ONCE -> 0;
+                    case AT_LEAST_ONCE -> 1;
+                    case EXACTLY_ONCE -> 2;
+                },
                 MessageHandlingOptions.MQTTMessagePerTag,
-                northboundMapping.getIncludeTagNames(),
-                northboundMapping.getIncludeTimestamp(),
-                mqttUserPropertyEntities,
-                northboundMapping.getMessageExpiryInterval() != null ?
-                        northboundMapping.getMessageExpiryInterval() :
-                        Long.MAX_VALUE);
-    }
-
-    public static @NotNull NorthboundMappingEntity fromPollingContext(PollingContext ctx) {
-        final List<MqttUserPropertyEntity> mqttUserProperties = ctx.getUserProperties()
-                .stream()
-                .map(mqttUserPropertyEntity -> new MqttUserPropertyEntity(mqttUserPropertyEntity.getName(),
-                        mqttUserPropertyEntity.getValue()))
-                .collect(Collectors.toList());
-
-        return new NorthboundMappingEntity(ctx.getTagName(),
-                ctx.getMqttTopic(),
-                ctx.getMqttQos(),
-                ctx.getMessageHandlingOptions(),
-                ctx.getIncludeTagNames(),
-                ctx.getIncludeTimestamp(),
-                mqttUserProperties,
-                ctx.getMessageExpiryInterval());
+                mapping.getIncludeTagNames(),
+                mapping.getIncludeTimestamp(),
+                mapping.getUserProperties().stream().map(NorthboundMappingEntity::userProp).toList(),
+                mapping.getMessageExpiryInterval());
     }
 
     public @NotNull String getTagName() {
@@ -162,11 +135,11 @@ public class NorthboundMappingEntity implements EntityValidatable {
     }
 
     public boolean isIncludeTagNames() {
-        return includeTagNames;
+        return includeTagNames != null && includeTagNames;
     }
 
     public boolean isIncludeTimestamp() {
-        return includeTimestamp;
+        return includeTimestamp == null || includeTimestamp; // default is true
     }
 
     public @NotNull List<MqttUserPropertyEntity> getUserProperties() {
@@ -187,7 +160,7 @@ public class NorthboundMappingEntity implements EntityValidatable {
         EntityValidatable.notEmpty(validationEvents, tagName, "tagName");
         EntityValidatable.notMatch(validationEvents,
                 () -> QoS.valueOf(maxQoS) != null,
-                () -> "maxQoS " + maxQoS + " is invalid");
+                () -> "maxQos" + ' ' + maxQoS + " is invalid");
         EntityValidatable.notNull(validationEvents, messageHandlingOptions, "messageHandlingOptions");
         EntityValidatable.notNull(validationEvents, includeTagNames, "includeTagNames");
         EntityValidatable.notNull(validationEvents, includeTimestamp, "includeTimestamp");
@@ -199,51 +172,18 @@ public class NorthboundMappingEntity implements EntityValidatable {
     }
 
     public @NotNull NorthboundMapping toPersistence() {
-        final List<MqttUserProperty> mqttUserProperties = this.getUserProperties()
-                .stream()
-                .map(mqttUserPropertyEntity -> new MqttUserProperty(mqttUserPropertyEntity.getName(),
-                        mqttUserPropertyEntity.getValue()))
-                .collect(Collectors.toList());
-        return new NorthboundMapping(this.getTagName(),
-                this.getTopic(),
-                this.getMaxQoS(),
-                this.getMessageExpiryInterval(),
-                this.getMessageHandlingOptions(),
-                this.isIncludeTagNames(),
-                this.isIncludeTimestamp(),
-                mqttUserProperties);
-    }
-
-    public @NotNull com.hivemq.edge.api.model.NorthboundMapping toApi() {
-        final List<com.hivemq.edge.api.model.MqttUserProperty> mqttUserProperties = this.getUserProperties()
-                .stream()
-                .map(mqttUserPropertyEntity -> (com.hivemq.edge.api.model.MqttUserProperty) com.hivemq.edge.api.model.MqttUserProperty.builder()
-                        .name(mqttUserPropertyEntity.getName())
-                        .value(mqttUserPropertyEntity.getValue())
-                        .build())
-                .toList();
-
-        ;
-        com.hivemq.edge.api.model.QoS maxQos = switch (this.getMaxQoS()) {
-            case 0 -> com.hivemq.edge.api.model.QoS.AT_MOST_ONCE;
-            case 1 -> com.hivemq.edge.api.model.QoS.AT_LEAST_ONCE;
-            case 2 -> com.hivemq.edge.api.model.QoS.EXACTLY_ONCE;
-            default -> com.hivemq.edge.api.model.QoS.AT_MOST_ONCE;
-        };
-
-        return com.hivemq.edge.api.model.NorthboundMapping.builder()
-                .tagName(this.getTagName())
-                .topic(this.getTopic())
-                .maxQoS(maxQos)
-                .messageExpiryInterval(this.getMessageExpiryInterval())
-                .includeTagNames(this.isIncludeTagNames())
-                .includeTimestamp(this.isIncludeTimestamp())
-                .userProperties(mqttUserProperties)
-                .build();
+        return new NorthboundMapping(tagName,
+                topic,
+                maxQoS,
+                messageHandlingOptions,
+                includeTagNames,
+                includeTimestamp,
+                userProperties.stream().map(p -> new MqttUserProperty(p.getName(), p.getValue())).toList(),
+                messageExpiryInterval);
     }
 
     @Override
-    public String toString() {
+    public @NotNull String toString() {
         return "FromEdgeMappingEntity{" +
                 "topic='" +
                 topic +
@@ -267,33 +207,29 @@ public class NorthboundMappingEntity implements EntityValidatable {
     }
 
     @Override
-    public boolean equals(final Object o) {
-        if (this == o) {
-            return true;
+    public boolean equals(final @Nullable Object o) {
+        if (o instanceof final NorthboundMappingEntity that) {
+            return Objects.equals(tagName, that.tagName) &&
+                    Objects.equals(topic, that.topic) &&
+                    maxQoS == that.maxQoS &&
+                    messageHandlingOptions == that.messageHandlingOptions &&
+                    includeTagNames == that.includeTagNames &&
+                    includeTimestamp == that.includeTimestamp &&
+                    Objects.equals(userProperties, that.userProperties) &&
+                    Objects.equals(messageExpiryInterval, that.messageExpiryInterval);
         }
-        if (o == null || getClass() != o.getClass()) {
-            return false;
-        }
-        final NorthboundMappingEntity that = (NorthboundMappingEntity) o;
-        return getMaxQoS() == that.getMaxQoS() &&
-                isIncludeTagNames() == that.isIncludeTagNames() &&
-                isIncludeTimestamp() == that.isIncludeTimestamp() &&
-                getMessageExpiryInterval() == that.getMessageExpiryInterval() &&
-                Objects.equals(getTopic(), that.getTopic()) &&
-                Objects.equals(getTagName(), that.getTagName()) &&
-                getMessageHandlingOptions() == that.getMessageHandlingOptions() &&
-                Objects.equals(getUserProperties(), that.getUserProperties());
+        return false;
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(getTopic(),
-                getTagName(),
-                getMaxQoS(),
-                getMessageHandlingOptions(),
-                isIncludeTagNames(),
-                isIncludeTimestamp(),
-                getUserProperties(),
-                getMessageExpiryInterval());
+        return Objects.hash(tagName,
+                topic,
+                maxQoS,
+                messageHandlingOptions,
+                includeTagNames,
+                includeTimestamp,
+                userProperties,
+                messageExpiryInterval);
     }
 }
